--- a/quant-backtest.html
+++ b/quant-backtest.html
@@ -163,9 +163,9 @@
 
 <p>完整的例子参考github·XQuant/demo中<a href="https://github.com/X0Leon/XQuant/blob/master/demo/ma_cross_strategy.py">ma_cross_strategy.py</a>文件。</p>
 <h2>可视化功能</h2>
-<p>XQuant自带简单而强大的可视化模块（基于matplotlib），例，某CTA策略回测结果的可视化：</p>
+<p>XQuant自带可视化模块（基于matplotlib），某CTA策略回测结果的可视化：</p>
 <p><img src="../images/chart_demo.png" width = "800" alt="XQuant可视化" align=center /></p>
-<p>更加强悍而弹性的量化投资可视化库也在筹备和初期开发中，其将与XQuant无缝结合，期待ing~ :)</p>
+<p>更加强大而弹性的量化投资可视化库也在筹备和初期开发中，其将与XQuant无缝结合，期待ing~ :)</p>
 <p>免责声明：仅供个人研究使用，不构成投资建议。如果感兴趣，欢迎联系我！</p>
   </div>
   <div class="tag-cloud">
