--- a/index.html
+++ b/index.html
@@ -87,6 +87,28 @@
 
 <article>
   <header>
+    <h2><a href="http://www.domuse.com/stand-by-or-against-earth-1.html#stand-by-or-against-earth-1">从塔斯马尼亚人到地球孤岛</a></h2>
+    <p>
+          Posted on 2017-01-07 in <a href="http://www.domuse.com/category/muse.html">Muse</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="http://www.domuse.com/tag/muse.html">muse</a>,              <a href="http://www.domuse.com/tag/universe.html">universe</a>,              <a href="http://www.domuse.com/tag/human.html">human</a>
+    </p>
+  </header>
+  <div>
+      
+“困住时间？不，不，是时间困住了我们，可能不像空间那么明显——你知道自己困在了沙漠里，但时间的笼子要隐蔽得多。”子风摇摇头。时间的均匀流逝和能量守恒密切相关，这是客观规律，从较长的时间尺度来看，能量守恒似乎是颠簸不破的真理。我们都是时间的奴隶。</p>
+
+      <br>
+      <a class="btn" href="http://www.domuse.com/stand-by-or-against-earth-1.html#stand-by-or-against-earth-1">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://www.domuse.com/quant-data.html#quant-data">数据的获取和存储</a></h2>
     <p>
           Posted on 2016-12-18 in <a href="http://www.domuse.com/category/quant.html">Quant</a>
@@ -299,29 +321,6 @@
       <p>Data Preview is a simple Python GUI program (using tkinter at present, maybe PyQt in the next version) to automatically convert the experimental data (just tsv format in this version) to graph by clicking the filename. A set of data files can also be simply merged together into a single ...</p>
       <br>
       <a class="btn" href="http://www.domuse.com/data-preview-release.html#data-preview-release">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://www.domuse.com/is-the-world-understandable.html#is-the-world-understandable">不确定性与不可知论</a></h2>
-    <p>
-          Posted on 2015-07-22 in <a href="http://www.domuse.com/category/science.html">Science</a>
-
-
-          &#8226;     Tagged with
-
-              <a href="http://www.domuse.com/tag/physics.html">physics</a>,              <a href="http://www.domuse.com/tag/muse.html">muse</a>
-    </p>
-  </header>
-  <div>
-      
-
-<p>&emsp;&emsp;牛顿的静态、机械的宇宙观蕴含着决定论，到拉普拉斯时为甚，他认为只要能收集到宇宙运行的足够数据，就可以预测宇宙的未来。抛开哲学思辨的探讨，决定论真正受到严肃的科学挑战是上世纪量子论的发展。量子理论的诞生不仅在科学上是一次开天辟地的大事，在哲学上也不同凡响：一方面，过去哲学中休眠的观念又有了生命活力，例如客观实在性；</p>
-
-      <br>
-      <a class="btn" href="http://www.domuse.com/is-the-world-understandable.html#is-the-world-understandable">    Continue reading
 </a>
   </div>
 </article>
