--- a/tags.html
+++ b/tags.html
@@ -94,10 +94,11 @@
           <li><a href="http://www.domuse.com/tag/data.html">data</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/essay.html">essay</a> (2)</li>
           <li><a href="http://www.domuse.com/tag/gui.html">GUI</a> (1)</li>
+          <li><a href="http://www.domuse.com/tag/human.html">human</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/latex.html">laTeX</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/life.html">life</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/markdown.html">markdown</a> (1)</li>
-          <li><a href="http://www.domuse.com/tag/muse.html">muse</a> (3)</li>
+          <li><a href="http://www.domuse.com/tag/muse.html">muse</a> (4)</li>
           <li><a href="http://www.domuse.com/tag/numerical.html">numerical</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/pelican.html">pelican</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/physics.html">physics</a> (6)</li>
@@ -107,6 +108,7 @@
           <li><a href="http://www.domuse.com/tag/redis.html">redis</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/scipy.html">scipy</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/storage.html">storage</a> (1)</li>
+          <li><a href="http://www.domuse.com/tag/universe.html">universe</a> (1)</li>
     </ul>
   </div>
 </article>
