--- a/stand-by-to-against-earth.html
+++ b/stand-by-to-against-earth.html
@@ -4,17 +4,17 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://www.domuse.com/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://www.domuse.com/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://www.domuse.com/theme/font-awesome/css/font-awesome.min.css">
-
-
-    <link href="http://www.domuse.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Leon's blog Atom">
+  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link rel="shortcut icon" href="http://www.domuse.com/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="http://www.domuse.com/images/favicon.ico" type="image/x-icon">
+    <link href="http://localhost:8000/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Leon's blog Atom">
+
+
+    <link rel="shortcut icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -30,32 +30,39 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <meta name="author" content="Leon" />
-    <meta name="description" content="" />
+<meta name="author" content="Leon" />
+<meta name="description" content="" />
+<meta name="keywords" content="muse, universe, fiction">
 <meta property="og:site_name" content="Leon's blog"/>
-<meta property="og:type" content="blog"/>
-<meta property="og:title" content="Leon's blog"/>
+<meta property="og:title" content="挣脱地球的束缚-1"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://www.domuse.com"/>
-<meta property="og:image" content="http://www.domuse.com/images/leon.png">
+<meta property="og:url" content="http://localhost:8000/stand-by-to-against-earth.html"/>
+<meta property="og:type" content="article"/>
+<meta property="article:published_time" content="2017-01-01 00:00:00+08:00"/>
+<meta property="article:modified_time" content=""/>
+<meta property="article:author" content="http://localhost:8000/author/leon.html">
+<meta property="article:section" content="Muse"/>
+<meta property="article:tag" content="muse"/>
+<meta property="article:tag" content="universe"/>
+<meta property="article:tag" content="fiction"/>
+<meta property="og:image" content="http://localhost:8000/images/leon.png">
 
-  <title>Leon's blog &ndash;     Categories
-</title>
+  <title>Leon's blog &ndash; 挣脱地球的束缚-1</title>
 
 </head>
 <body>
   <aside>
     <div>
-      <a href="http://www.domuse.com">
-        <img src="http://www.domuse.com/images/leon.png" alt="Leon" title="Leon">
+      <a href="http://localhost:8000">
+        <img src="http://localhost:8000/images/leon.png" alt="Leon" title="Leon">
       </a>
-      <h1><a href="http://www.domuse.com">Leon</a></h1>
+      <h1><a href="http://localhost:8000">Leon</a></h1>
 
 <p>读书写字和思考的地方</p>
       <nav>
         <ul class="list">
-          <li><a href="http://www.domuse.com/pages/about.html#about">About</a></li>
+          <li><a href="http://localhost:8000/pages/about.html#about">About</a></li>
 
           <li><a href="http://sciencefan.org/" target="_blank">wiki</a></li>
         </ul>
@@ -72,31 +79,56 @@
   <main>
 
     <nav>
-      <a href="http://www.domuse.com">    Home
+      <a href="http://localhost:8000">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
 
-      <a href="http://www.domuse.com/feeds/all.atom.xml">    Atom
+      <a href="http://localhost:8000/feeds/all.atom.xml">    Atom
 </a>
 
     </nav>
 
 <article class="single">
   <header>
-    <h1>    Categories
-</h1>
+    <h1 id="stand-by-to-against-earth">挣脱地球的束缚-1</h1>
+    <p>
+          Posted on 2017-01-01 in <a href="http://localhost:8000/category/muse.html">Muse</a>
+
+
+    </p>
   </header>
+
+
   <div>
-    <ul class="list">
-      <li><a href="http://www.domuse.com/category/coding.html">Coding</a> (4)</li>
-      <li><a href="http://www.domuse.com/category/muse.html">Muse</a> (3)</li>
-      <li><a href="http://www.domuse.com/category/quant.html">Quant</a> (2)</li>
-      <li><a href="http://www.domuse.com/category/science.html">Science</a> (5)</li>
-    </ul>
+    
   </div>
+  <div class="tag-cloud">
+    <p>
+      <a href="http://localhost:8000/tag/muse.html">muse</a>
+      <a href="http://localhost:8000/tag/universe.html">universe</a>
+      <a href="http://localhost:8000/tag/fiction.html">fiction</a>
+    </p>
+  </div>
+
+
+
+
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'leonpelican';
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>
+        Please enable JavaScript to view comments.
+
+</noscript>
 </article>
 
     <footer>
@@ -137,8 +169,8 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Leon's blog ",
-  "url" : "http://www.domuse.com",
-  "image": "http://www.domuse.com/images/leon.png",
+  "url" : "http://localhost:8000",
+  "image": "http://localhost:8000/images/leon.png",
   "description": ""
 }
 </script>
