--- a/archives.html
+++ b/archives.html
@@ -91,6 +91,8 @@
   </header>
   <div>
     <dl>
+      <dt>2017-01-18</dt>
+      <dd><a href="http://www.domuse.com/stock-exclude-right.html">除权和复权</a></dd>
       <dt>2017-01-07</dt>
       <dd><a href="http://www.domuse.com/stand-by-or-against-earth-1.html">从塔斯马尼亚人到地球孤岛</a></dd>
       <dt>2016-12-18</dt>
