--- a/index2.html
+++ b/index2.html
@@ -87,6 +87,26 @@
 
 <article>
   <header>
+    <h2><a href="http://www.domuse.com/data-preview-release.html#data-preview-release">Data Preview v0.1 released</a></h2>
+    <p>
+          Posted on 2015-08-24 in <a href="http://www.domuse.com/category/coding.html">Coding</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="http://www.domuse.com/tag/python.html">python</a>,              <a href="http://www.domuse.com/tag/gui.html">GUI</a>
+    </p>
+  </header>
+  <div>
+      <p>Data Preview is a simple Python GUI program (using tkinter at present, maybe PyQt in the next version) to automatically convert the experimental data (just tsv format in this version) to graph by clicking the filename. A set of data files can also be simply merged together into a single ...</p>
+      <br>
+      <a class="btn" href="http://www.domuse.com/data-preview-release.html#data-preview-release">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://www.domuse.com/is-the-world-understandable.html#is-the-world-understandable">不确定性与不可知论</a></h2>
     <p>
           Posted on 2015-07-22 in <a href="http://www.domuse.com/category/science.html">Science</a>
