--- a/index.html
+++ b/index.html
@@ -87,6 +87,29 @@
 
 <article>
   <header>
+    <h2><a href="http://www.domuse.com/stock-exclude-right.html#stock-exclude-right">除权和复权</a></h2>
+    <p>
+          Posted on 2017-01-18 in <a href="http://www.domuse.com/category/quant.html">Quant</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="http://www.domuse.com/tag/quant.html">quant</a>,              <a href="http://www.domuse.com/tag/stock.html">stock</a>
+    </p>
+  </header>
+  <div>
+      
+
+<p>&emsp;&emsp;送股、转股、配股（增发）、分红、派息……总有一款让新韭菜头晕，其实这些都是数字游戏，只是通过分现金或变动股数来调整股价，总市值保持不变。那公司为什么要这么做呢？考虑增股或分红需要缴税，小股东还要亏损一点，但大股东总有某种原因，例如市值管理，市场有炒作低价股的倾向！除权（Exclude Right, XR)是发行公司按一定比例分配<strong>股票</strong>股利给股东，增加公司总股数；除息（Exclude Dividen, XD）是分配<strong>现金</strong>股利给股东，两者都会降低每股权益，且有时候统称为权息，或者就是除权。</p>
+
+      <br>
+      <a class="btn" href="http://www.domuse.com/stock-exclude-right.html#stock-exclude-right">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://www.domuse.com/stand-by-or-against-earth-1.html#stand-by-or-against-earth-1">从塔斯马尼亚人到地球孤岛</a></h2>
     <p>
           Posted on 2017-01-07 in <a href="http://www.domuse.com/category/muse.html">Muse</a>
@@ -301,26 +324,6 @@
 
       <br>
       <a class="btn" href="http://www.domuse.com/liquid-nitrogen-ice-cream.html#liquid-nitrogen-ice-cream">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://www.domuse.com/data-preview-release.html#data-preview-release">Data Preview v0.1 released</a></h2>
-    <p>
-          Posted on 2015-08-24 in <a href="http://www.domuse.com/category/coding.html">Coding</a>
-
-
-          &#8226;     Tagged with
-
-              <a href="http://www.domuse.com/tag/python.html">python</a>,              <a href="http://www.domuse.com/tag/gui.html">GUI</a>
-    </p>
-  </header>
-  <div>
-      <p>Data Preview is a simple Python GUI program (using tkinter at present, maybe PyQt in the next version) to automatically convert the experimental data (just tsv format in this version) to graph by clicking the filename. A set of data files can also be simply merged together into a single ...</p>
-      <br>
-      <a class="btn" href="http://www.domuse.com/data-preview-release.html#data-preview-release">    Continue reading
 </a>
   </div>
 </article>
