--- a/tags.html
+++ b/tags.html
@@ -104,9 +104,10 @@
           <li><a href="http://www.domuse.com/tag/physics.html">physics</a> (6)</li>
           <li><a href="http://www.domuse.com/tag/poetry.html">poetry</a> (2)</li>
           <li><a href="http://www.domuse.com/tag/python.html">python</a> (4)</li>
-          <li><a href="http://www.domuse.com/tag/quant.html">quant</a> (2)</li>
+          <li><a href="http://www.domuse.com/tag/quant.html">quant</a> (3)</li>
           <li><a href="http://www.domuse.com/tag/redis.html">redis</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/scipy.html">scipy</a> (1)</li>
+          <li><a href="http://www.domuse.com/tag/stock.html">stock</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/storage.html">storage</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/universe.html">universe</a> (1)</li>
     </ul>
